# react-langgraph

./: .env.example  .gitignore  AGENTS.md  API.md  CLAUDE.md  CONTEXT.md  ERD.md  docker-compose.yml  project-spec-extend.md  project-spec.md  pyproject.toml
backend/: .dockerignore  Dockerfile  checkpoints.db  config.py  conftest.py  entrypoint.sh  llm_factory.py  main.py  pyproject.toml  pytest.ini  requirements.txt  smoke_test.py
backend/db/: connection.py  seed.sql
backend/graph/: graph.py  mcp_client.py  memory_loader.py  memory_update.py  planner.py  router.py  state.py  tools.py  verifier.py
backend/graph/calendar/: cli_tools.py  graph.py  planner.py
backend/graph/customer_service/: graph.py  memory_loader.py  planner.py  (+1 more)
backend/routes/: chat.py  data.py  memory.py  providers.py  sessions.py
backend/scripts/: populate_test_data.py
backend/tests/: test_calendar_cli_tools.py  test_calendar_graph.py  test_chat_provider_forwarding.py  test_chat_request_validation.py  test_chat_routes.py  test_chat_session_persistence.py  test_config.py  test_data_routes.py  test_db_connection.py  test_entrypoint_oauth_gate.py  test_graph.py  test_graph_router.py  test_infrastructure_alignment.py  test_llm_factory.py  test_llm_factory_providers.py  test_mcp_client.py  test_memory_nodes.py  test_memory_routes.py  test_memory_update_contract.py  test_planner_provider_switching.py  test_planner_verifier.py  test_populate_test_data.py  test_providers_route.py  test_refund_email_graph.py  test_sessions_agent_type.py  test_sessions_routes.py  test_tools.py  test_write_tools.py
(+106 files in other folders)
